--- a/Development-Source/package.json
+++ b/Development-Source/package.json
@@ -7,8 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "storybook": "ng run wb-design-system:storybook",
-    "build-storybook": "ng run wb-design-system:build-storybook"
+    "storybook": "ng run library:storybook",
+    "build-storybook": "ng run library:build-storybook"
   },
   "private": true,
   "dependencies": {
