--- a/Development-Source/tsconfig.json
+++ b/Development-Source/tsconfig.json
@@ -19,7 +19,7 @@
     "module": "ES2022",
     "paths": {
       "wb-design-system": [
-        "./dist/wb-design-system"
+        "./_Build_Output/library"
       ]
     }
   },
